2005-03-29 Vladimir Hirsl
	Problem markers for DOM AST based indexer.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/search/indexing/IIndexEncodingConstants.java

2005-03-28 Bogdan Gheorghe
	Modified DeltaProcessor to make use of ICDTIndexer elements when requesting an index for an element.
	Added indextiming option to trace options in CCorePlugin.
	Added new CTagsIndexer
	
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java
	* src/org/eclipse/cdt/core/CCorePlugin.java
	* plugin.xml
	
2005-03-24 Eric ter Haar
	Added some e_machine types and made section reading seek to each section
	before reading encase section records are extended.
	
	* util/org/eclipse/cdt/utils/elf/Elf.java	
	

2005-03-24 Vladimir Hirsl
	New DOM AST based indexer.
	Indexer infrastructure and CPP/C AST visitors.
	Generates the same index as the old one.
	Work in progress: 
		- include directives dependency
		- problem marker generation
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMAddCompilationUnitToIndex.java
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexer.java
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	+ index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexerEncoderUtil.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AbstractIndexer.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AddCompilationUnitToIndex.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/AddFileToIndex.java