@@ -1,3 +1,8 @@
+2005-03-30 Vladimir Hirsl
+	Fix for NPE in IndexEncoderUtil.calculateIndexFlags
+	
+	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexEncoderUtil.java
+
 2005-03-29 Vladimir Hirsl
 	Problem markers for DOM AST based indexer.
 	
